# ndb

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  code_style.md  config.cmake
benchmark/: CMakeLists.txt  base.cpp  main.cpp
example/: CMakeLists.txt  basic.cpp  object.cpp  object_query.cpp  persistent.cpp
experimental/: CMakeLists.txt  alias.cpp  cx_deduction.cpp  database_creation.cpp  graph.cpp  main.cpp  orm.cpp  persistent.cpp  prepared.cpp  preprocessor.cpp  preprocessor.hpp  query.cpp
experimental/debug/: query.hpp
include/ndb/: basic_engine.hpp  connector.hpp  cx_error.hpp  engine.hpp  error.hpp  expression.hpp  expression.tpp  field.hpp  function.hpp  fwd.hpp  id.hpp  line.hpp  model.hpp  object.hpp  option.hpp  persistent.hpp  prepared_query.hpp  preprocessor.hpp  query.hpp  result.hpp  statement.hpp  table.hpp  type.hpp  utility.hpp  value.hpp
include/ndb/engine/: basic.hpp  basic.tpp  basic_connection.hpp  native_query.hpp  type.hpp
include/ndb/engine/mongo/: mongo.hpp
include/ndb/engine/mysql/: mysql.hpp
include/ndb/engine/nse/: nse.hpp
include/ndb/engine/postgre/: connection.hpp  postgre.hpp  postgre.tpp  query.hpp
include/ndb/engine/sqlite/: connection.hpp  function.hpp  query.hpp  sqlite.hpp  sqlite.tpp  type.hpp
include/ndb/expression/: basic.hpp  category.hpp  code.hpp  deduce.hpp  deduction.hpp  form.hpp  function.hpp  fwd.hpp  native.hpp  operator.hpp  scalar.hpp  sql.hpp  type.hpp  utility.hpp
include/ndb/expression/bson/: native.hpp  type.hpp
include/ndb/expression/sql/: code.hpp  native.hpp  type.hpp
include/ndb/function/: generic.hpp  sql.hpp
include/ndb/type/: custom.hpp  map.hpp  system.tpp
include/ndb/utility/: cx_string.hpp
include/stz/: filesystem
test/: CMakeLists.txt  config.hpp  database.hpp  test.hpp
test/source/: expression.cpp  query.cpp  type.cpp
